--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Single Project Template</h1>
+    <h1>{{project.title}}</h1>
+    <p>{{project.description}}</p>
 {% endblock content %}
