--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -1,22 +1,25 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Projects Template</h1>
-    <p>Hello you are on the {{message}}</p>
-
-    {% if number > 10 %}
-    <p>Number is greater than ten</p>
-    {% elif number == 10 %}
-    <p>Number is equal to ten</p>
-    {% else %}
-    <p>Number is smaller than ten</p>
-    {% endif %}
-
-    <hr>
-    <ul>
-    {% for project in projects  %}
-        <li><h3><a href="{% url 'project' project.id %}">{{project.title}}</a></h3><span style="color:blueviolet">{{project.description}}</span></li>
-    {% endfor %}
-    </ul>
-
     <h1>Projects</h1>
+
+    <table>
+        <tr>
+            <th>ID</th>
+            <th>Project</th>
+            <th>Positive votes</th>
+            <th>Votes</th>
+            <th></th>
+        </tr>
+        {% for project in projects %}
+            <tr>
+                <td>{{project.id}}</td>
+                <td>{{project.title}}</td>
+                <td>{{project.vote_ratio}}%</td>
+                <td>{{project.vote_total}}</td>
+                <td>{{project.created}}</td>
+                <td><a href="{% url 'project' project.id %}">View</a></td>
+            </tr>
+        {% endfor %}
+    </table>
+
 {% endblock content %}
