--- a/projects/templates/projects/project_form.html
+++ b/projects/templates/projects/project_form.html
@@ -1,13 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-<form method="post">
+<form action="" method="post">
     {% csrf_token %}
-    {% for field in form  %}
-        <div>
-            {{field.label}}
-            {{field}}
-        </div>
-    {% endfor %}
+
+    {{form.as_p}}
     <input type="submit">
 </form>
 {% endblock content %}
