Add delete template

--- a/projects/templates/projects/delete_template.html
+++ b/projects/templates/projects/delete_template.html
@@ -4,7 +4,7 @@
 
 <form action="" method="post">
 {% csrf_token %}
-<p>Are you sure you 2want to delete "{{object}}"</p>
+<p>Are you sure you want to delete "{{object}}"</p>
 <a href="{% url 'projects' %}">Go Back</a>
 
 <input type="submit" value="Confirm" >
