--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -6,6 +7,7 @@
         <meta name="description" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>DevSearch</title>
+        <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/main.css' %}">
     </head>
     <body>
         {% include "navbar.html" %}
