--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,5 @@
-<h1>Logo</h1>
+{% load static %}
+<img width="50" height="50" src="{% static 'images/logo.png' %}" alt="logo">
+
 <a href="{% url 'create-project' %}">Add Project</a>
 <hr>
