--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+    <img src="{{ project.featured_image.url }}" alt="boxing-image">
     <h1>{{project.title}}</h1>
     <p>{{project.description}}</p>
     <hr>
