--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -33,7 +33,7 @@
                             <img class="project__thumbnail" src="{{project.featured_image.url}}" alt="project thumbnail" />
                             <div class="card__body">
                                 <h3 class="project__title">{{project.title}}</h3>
-                                <p><a class="project__author" href="">By {{project.owner.name}}
+                                <p><a class="project__author" href="{% url 'profile' project.owner.id %}">By {{project.owner.name}}
                                         </a>
                                 </p>
                                 <p class="project--rating">
