--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -2,12 +2,29 @@
 
 {% block content %}
 
+{% if page == "register" %}
+    <h1>Register User</h1>
+
+    <form action="{% url 'register' %}" method="post">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" value="Register User">
+    </form>
+
+    <p>Already have an account <a href="{% url 'login' %}">Sing Up</a></p>
+
+{% else %}
 <form action="{% url 'login' %}" method="post">
     {% csrf_token %}
 
     <input type="text" name="username" placeholder="Username">
     <input type="password" name="password" placeholder="Enter password">
     <input type="submit" value="Login">
+
+    <p>Don't have an account <a href="{% url 'register' %}">Sing Up</a></p>
 </form>
+{% endif %}
+
+
 
 {% endblock content %}
