--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 {% load static %}
+<!DOCTYPE html>
 <html lang="en">
 
     <head>
@@ -24,15 +24,17 @@
         {% include "navbar.html" %}
 
         {% if messages %}
-            <ul class="messages">
-                {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                {% endfor %}
-            </ul>
+            {% for message in messages %}
+                <div class="alert alert--{{message.tags}}">
+                    <p class="alert__message">{{message}}</p>
+                    <button class="alert__close">X</button>
+                </div>
+            {% endfor %}
         {% endif %}
 
         {% block content %}
         {% endblock content %}
-        <p>FOOTER</p>
+        
     </body>
+    <script src="{% static 'uikit/app.js' %}"></script>
 </html>
