--- a/users/templates/users/user-profile.html
+++ b/users/templates/users/user-profile.html
@@ -26,12 +26,12 @@
                 {% endif %}
                 {% if profile.social_linkedin  %}
                 <li>
-                  <a title="LinkedIn" href="{{profile.social_linkedin}}" target="_blank"><img src="{% static 'icons/linkedin.svg' %}" alt="linkedin Logo" /></i></a>
+                  <a title="LinkedIn" href="{{profile.social_linkedin}}" target="_blank"><img src="{% static 'icons/linkedin.svg' %}" alt="linkedin Logo" /></a>
                 </li>
                 {% endif %}
                 {% if profile.social_website  %}
                 <li>
-                  <a title="Personal Website" href="{{profile.social_website}}" target="_blank"><img src="{% static 'icons/web.svg' %}" alt="web Logo" /></i></a>
+                  <a title="Personal Website" href="{{profile.social_website}}" target="_blank"><img src="{% static 'icons/web.svg' %}" alt="web Logo" /></a>
                 </li>
                 {% endif %}
               </ul>
